# quazydb

./: .readthedocs.yaml  README.md  README.rst  pyproject.toml  setup.py
docs/: requirements.txt
docs/source/: advanced.rst  classes.rst  conf.py  disclaimer.rst  getting_started.rst  index.rst  queries.rst  user_guide.rst
quazy/: __init__.py  db.py  db_factory.py  db_field.py  db_protocol.py  db_query.py  db_table.py  db_types.py  exceptions.py  helpers.py  migrations.py  query.py  stub.py  syncpg.py  translator.py  translator_psql.py  translator_sqlite.py
tests/: migration_1.py  migration_2.py  migration_3.py  migration_4.py  migration_5.py  migration_6.py  module_1.py  test_async.py  test_extend.py  test_migrations.py  test_quazy.py  test_short.py
