[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "quazydb"
license = {text = "Apache 2.0"}
authors = [
    {name = "Andrey Aseev", email = "invent@zergos.ru"}
]
maintainers = [
    {name = "Andrey Aseev", email = "invent@zergos.ru"}
]
urls = {Homepage = "https://github.com/zergos/quazydb"}
description = "Powerful yet simple Python ORM"
dependencies = [
    'psycopg>=3.0.1',
    'psycopg-binary>=3.0.1',
    'psycopg-pool>=3.0',
    'PyYAML>=6.0.1',
    'jsonpickle>=2.0.0',
]
requires-python = ">=3.12"
dynamic = ["version", "readme"]
keywords = ["ORM", "database", "postgres", "model", "data"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Database",

]

[project.urls]
Documentation = "https://quazydb.readthedocs.io/en/latest/"
Repository = "https://github.com/zergos/quazydb.git"
Issues = "https://github.com/zergos/quazydb/issues"

[tool.setuptools]
package-dir = {quazy = "quazy"}

[tool.setuptools.dynamic]
version = {attr = "quazy.VERSION"}
readme = {file = ["README.rst"]}
