[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "quazydb"
license  = "Apache-2.0"
authors = [
    {name = "Andrey Aseev", email = "andrey@aseev.biz"}
]
maintainers = [
    {name = "Andrey Aseev", email = "andrey@aseev.biz"}
]
description = "Powerful yet simple Python ORM"
dependencies = [
    'strenum; python_version <= "3.11"',
]
requires-python = ">=3.10"
dynamic = ["version", "readme"]
keywords = ["ORM", "database", "postgres", "model", "data"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Database",

]

[project.urls]
Documentation = "https://quazydb.readthedocs.io/en/latest/"
Repository = "https://github.com/zergos/quazydb.git"
Issues = "https://github.com/zergos/quazydb/issues"

[project.optional-dependencies]
strict = ["pydantic"]
psycopg = ["psycopg[binary,pool]"]

[tool.setuptools]
package-dir = {quazy = "quazy"}

[tool.setuptools.dynamic]
version = {attr = "quazy.VERSION"}
readme = {file = ["README.rst"]}
